--- a/scripts/Template cutout from step-file.ipynb
+++ b/scripts/Template cutout from step-file.ipynb
@@ -2,14 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 1,
    "id": "5c12eb24-97f8-4afc-86cf-fd9f1aee344f",
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting auto display for cadquery Workplane and Shape\n"
+     ]
+    },
+    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "de474ca9c744480b957077f457fd8876",
+       "model_id": "c94c6133ae774fac93145b4ccd495249",
        "version_major": 2,
        "version_minor": 0
       },
@@ -22,11 +29,196 @@
     },
     {
      "data": {
+      "text/html": [
+       "<style>\n",
+       ".scroll-area {\n",
+       "    overflow: scroll !important;\n",
+       "    border: unset !important;\n",
+       "}\n",
+       "\n",
+       ".mac-scrollbar::-webkit-scrollbar {\n",
+       "    width: 5px !important;\n",
+       "    height: 5px !important;\n",
+       "}\n",
+       "\n",
+       ".mac-scrollbar::-webkit-scrollbar-track {\n",
+       "    background-color: transparent !important;\n",
+       "}\n",
+       "\n",
+       ".mac-scrollbar .widget-html-content {\n",
+       "    overflow-x: visible;\n",
+       "    overflow-y: visible;\n",
+       "}\n",
+       "\n",
+       ".tab-content-no-padding .widget-tab-contents {\n",
+       "    overflow-x: visible !important;\n",
+       "    overflow-y: visible !important;\n",
+       "    padding-bottom: 0px !important;\n",
+       "}\n",
+       "\n",
+       ".view_renderer {\n",
+       "    border: 1px solid var(--jp-border-color1);\n",
+       "    margin-top: 3px;\n",
+       "    margin-left: 2px;\n",
+       "}\n",
+       "\n",
+       ".view_tree {\n",
+       "    padding: 0px !important;\n",
+       "}\n",
+       "\n",
+       ".view_axes {\n",
+       "    width: 60px !important;\n",
+       "    margin-left: 5px !important;\n",
+       "}\n",
+       "\n",
+       ".view_zero {\n",
+       "    width: 55px !important;\n",
+       "}\n",
+       "\n",
+       ".view_grid {\n",
+       "    width: 56px !important;\n",
+       "}\n",
+       "\n",
+       ".view_ortho {\n",
+       "    width: 64px !important;\n",
+       "}\n",
+       "\n",
+       ".view_transparent {\n",
+       "    width: 125px !important;\n",
+       "}\n",
+       "\n",
+       ".view_black_edges {\n",
+       "    width: 105px !important;\n",
+       "}\n",
+       "\n",
+       ".view_button {\n",
+       "    padding: 0px !important;\n",
+       "}\n",
+       "\n",
+       ".view_button>img {\n",
+       "    height: 28px;\n",
+       "    width: 36px;\n",
+       "}\n",
+       "\n",
+       ".node_entry_wrap {\n",
+       "    white-space: pre;\n",
+       "}\n",
+       "\n",
+       ".node_entry {\n",
+       "    white-space: nowrap;\n",
+       "    padding-top: 4px;\n",
+       "}\n",
+       "\n",
+       ".t-caret {\n",
+       "    cursor: pointer;\n",
+       "    -webkit-user-select: none;\n",
+       "    /* Safari 3.1+ */\n",
+       "    -moz-user-select: none;\n",
+       "    /* Firefox 2+ */\n",
+       "    -ms-user-select: none;\n",
+       "    /* IE 10+ */\n",
+       "    user-select: none;\n",
+       "}\n",
+       "\n",
+       ".t-caret-down::before {\n",
+       "    -ms-transform: rotate(90deg);\n",
+       "    /* IE 9 */\n",
+       "    -webkit-transform: rotate(90deg);\n",
+       "    /* Safari */\n",
+       "    transform: rotate(90deg);\n",
+       "}\n",
+       "\n",
+       ".toplevel {\n",
+       "    list-style-type: none;\n",
+       "    padding-inline-start: 0px;\n",
+       "}\n",
+       "\n",
+       ".nested {\n",
+       "    display: none;\n",
+       "    list-style-type: none;\n",
+       "    padding-inline-start: 16px;\n",
+       "}\n",
+       "\n",
+       ".active {\n",
+       "    display: block;\n",
+       "}\n",
+       "\n",
+       ".icon {\n",
+       "    width: 28px !important;\n",
+       "    height: 22px !important;\n",
+       "    padding-right: 2px;\n",
+       "    vertical-align: middle;\n",
+       "}\n",
+       "\n",
+       ".indent {\n",
+       "    margin-left: 12px;\n",
+       "}\n",
+       "\n",
+       ".tree_label {\n",
+       "    padding-left: 2px;\n",
+       "    font-size: 14px;\n",
+       "}\n",
+       "\n",
+       ".scroll_down {\n",
+       "    display: flex;\n",
+       "    flex-direction: column-reverse;\n",
+       "}\n",
+       "\n",
+       ".small_table {\n",
+       "    line-height: 14px;\n",
+       "}\n",
+       "\n",
+       ".monospace select {\n",
+       "    font-family: monospace;\n",
+       "}\n",
+       "\n",
+       "        .t-caret::before {\n",
+       "            content: u\"▶\";\n",
+       "            font-size: 12px;\n",
+       "            color: \"#080808\";\n",
+       "            display: inline-block;\n",
+       "            margin-right: 2px;\n",
+       "        }\n",
+       "\n",
+       "        .mac-scrollbar::-webkit-scrollbar-thumb {\n",
+       "            background-color: rgba(0, 0, 0, 0.2) !important;\n",
+       "            border-radius: 100px !important;\n",
+       "        }\n",
+       "\n",
+       "        .mac-scrollbar::-webkit-scrollbar-thumb:hover {\n",
+       "            background: rgba(0, 0, 0, 0.4) !important;\n",
+       "        }\n",
+       "\n",
+       "        .mac-scrollbar::-webkit-scrollbar-thumb:active {\n",
+       "            background: #181818 !important;\n",
+       "        }\n",
+       "\n",
+       "        .mac-scrollbar::-webkit-scrollbar-corner {\n",
+       "            background: white;\n",
+       "        }\n",
+       "\n",
+       "        .view_output {\n",
+       "            border: 1px solid var(--jp-border-color1);\n",
+       "            margin: 2px 2px 2px 2px !important;\n",
+       "            padding-right: 1px !important;\n",
+       "            background-color: white;\n",
+       "        }\n",
+       "    </style>"
+      ],
       "text/plain": [
-       "<jupyter_cadquery.cad_display.CadqueryDisplay at 0x7f21fd833a90>"
+       "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 39,
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<jupyter_cadquery.cad_display.CadqueryDisplay at 0x7f27d7df7eb0>"
+      ]
+     },
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -48,7 +240,7 @@
     "height = obj_bbox.ylen +4  # Height of the block\n",
     "thickness = obj_bbox.zlen *0.5 # Thickness of the block\n",
     "\n",
-    "box2 = cq.Workplane(\"XY\").box(length, height, thickness, combine=False).cut(obj)\n",
+    "box2 = cq.Workplane(\"XY\").box(length, height, thickness, combine=False).edges(\"|Z\").fillet(2).cut(obj)\n",
     "\n",
     "show(box2)"
    ]
