Added export to script

--- a/scripts/Importing step-files.ipynb
+++ b/scripts/Importing step-files.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 29,
    "id": "b31a4f29-7cfa-490c-8b81-04b64aa43db7",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b18a72ac9cf14ddfb38c6d5e00c1a401",
+       "model_id": "c9f305d1013646369751f303cba29877",
        "version_major": 2,
        "version_minor": 0
       },
@@ -21,14 +21,16 @@
      "output_type": "display_data"
     },
     {
-     "data": {
-      "text/plain": [
-       "<jupyter_cadquery.cad_display.CadqueryDisplay at 0x7feafc274250>"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "Standard_DomainError",
+     "evalue": "Convert_ConeToBSplineSurface",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mStandard_DomainError\u001b[0m                      Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_39/3534921615.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     13\u001b[0m     [0, 0, 0, 1]])\n\u001b[1;32m     14\u001b[0m \u001b[0mobj\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mobj\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mval\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 15\u001b[0;31m \u001b[0mobj\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mobj\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtransformGeometry\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mt\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     16\u001b[0m \u001b[0mshow\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mobj\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/opt/conda/envs/cq/lib/python3.8/site-packages/cadquery/occ_impl/shapes.py\u001b[0m in \u001b[0;36mtransformGeometry\u001b[0;34m(self, tMatrix)\u001b[0m\n\u001b[1;32m    814\u001b[0m         \"\"\"\n\u001b[1;32m    815\u001b[0m         r = Shape.cast(\n\u001b[0;32m--> 816\u001b[0;31m             \u001b[0mBRepBuilderAPI_GTransform\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwrapped\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtMatrix\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwrapped\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mShape\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    817\u001b[0m         )\n\u001b[1;32m    818\u001b[0m         \u001b[0mr\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mforConstruction\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mforConstruction\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mStandard_DomainError\u001b[0m: Convert_ConeToBSplineSurface"
+     ]
     }
    ],
    "source": [
@@ -38,9 +40,16 @@
     "height = 60.0  # Height of the block\n",
     "thickness = 10.0  # Thickness of the block\n",
     "\n",
-    "result = cq.importers.importStep('data/HYDAC-10000301803-SWB-000_01.STEP')\n",
-    "\n",
-    "show(result)"
+    "obj = cq.importers.importStep('data/obj1_simplified.stp')\n",
+    "show(obj)\n",
+    "t = cq.Matrix([\n",
+    "    [2, 0, 0, 0],\n",
+    "    [0, 1 , 0, 0],\n",
+    "    [0, 0, 1, 0],\n",
+    "    [0, 0, 0, 1]])\n",
+    "obj = obj.val()\n",
+    "obj = obj.transformGeometry(t)\n",
+    "show(obj)"
    ]
   },
   {
