--- a/scripts/create_fixture.ipynb
+++ b/scripts/create_fixture.ipynb
@@ -2,14 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 1,
    "id": "353a306b-4506-4eb9-8c98-d969241e722c",
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting auto display for cadquery Workplane and Shape\n"
+     ]
+    },
+    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "498e2b98dd8840f08f681087e28d865a",
+       "model_id": "2847510a22574397aa143f8471d9f22d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -22,8 +29,193 @@
     },
     {
      "data": {
+      "text/html": [
+       "<style>\n",
+       ".scroll-area {\n",
+       "    overflow: scroll !important;\n",
+       "    border: unset !important;\n",
+       "}\n",
+       "\n",
+       ".mac-scrollbar::-webkit-scrollbar {\n",
+       "    width: 5px !important;\n",
+       "    height: 5px !important;\n",
+       "}\n",
+       "\n",
+       ".mac-scrollbar::-webkit-scrollbar-track {\n",
+       "    background-color: transparent !important;\n",
+       "}\n",
+       "\n",
+       ".mac-scrollbar .widget-html-content {\n",
+       "    overflow-x: visible;\n",
+       "    overflow-y: visible;\n",
+       "}\n",
+       "\n",
+       ".tab-content-no-padding .widget-tab-contents {\n",
+       "    overflow-x: visible !important;\n",
+       "    overflow-y: visible !important;\n",
+       "    padding-bottom: 0px !important;\n",
+       "}\n",
+       "\n",
+       ".view_renderer {\n",
+       "    border: 1px solid var(--jp-border-color1);\n",
+       "    margin-top: 3px;\n",
+       "    margin-left: 2px;\n",
+       "}\n",
+       "\n",
+       ".view_tree {\n",
+       "    padding: 0px !important;\n",
+       "}\n",
+       "\n",
+       ".view_axes {\n",
+       "    width: 60px !important;\n",
+       "    margin-left: 5px !important;\n",
+       "}\n",
+       "\n",
+       ".view_zero {\n",
+       "    width: 55px !important;\n",
+       "}\n",
+       "\n",
+       ".view_grid {\n",
+       "    width: 56px !important;\n",
+       "}\n",
+       "\n",
+       ".view_ortho {\n",
+       "    width: 64px !important;\n",
+       "}\n",
+       "\n",
+       ".view_transparent {\n",
+       "    width: 125px !important;\n",
+       "}\n",
+       "\n",
+       ".view_black_edges {\n",
+       "    width: 105px !important;\n",
+       "}\n",
+       "\n",
+       ".view_button {\n",
+       "    padding: 0px !important;\n",
+       "}\n",
+       "\n",
+       ".view_button>img {\n",
+       "    height: 28px;\n",
+       "    width: 36px;\n",
+       "}\n",
+       "\n",
+       ".node_entry_wrap {\n",
+       "    white-space: pre;\n",
+       "}\n",
+       "\n",
+       ".node_entry {\n",
+       "    white-space: nowrap;\n",
+       "    padding-top: 4px;\n",
+       "}\n",
+       "\n",
+       ".t-caret {\n",
+       "    cursor: pointer;\n",
+       "    -webkit-user-select: none;\n",
+       "    /* Safari 3.1+ */\n",
+       "    -moz-user-select: none;\n",
+       "    /* Firefox 2+ */\n",
+       "    -ms-user-select: none;\n",
+       "    /* IE 10+ */\n",
+       "    user-select: none;\n",
+       "}\n",
+       "\n",
+       ".t-caret-down::before {\n",
+       "    -ms-transform: rotate(90deg);\n",
+       "    /* IE 9 */\n",
+       "    -webkit-transform: rotate(90deg);\n",
+       "    /* Safari */\n",
+       "    transform: rotate(90deg);\n",
+       "}\n",
+       "\n",
+       ".toplevel {\n",
+       "    list-style-type: none;\n",
+       "    padding-inline-start: 0px;\n",
+       "}\n",
+       "\n",
+       ".nested {\n",
+       "    display: none;\n",
+       "    list-style-type: none;\n",
+       "    padding-inline-start: 16px;\n",
+       "}\n",
+       "\n",
+       ".active {\n",
+       "    display: block;\n",
+       "}\n",
+       "\n",
+       ".icon {\n",
+       "    width: 28px !important;\n",
+       "    height: 22px !important;\n",
+       "    padding-right: 2px;\n",
+       "    vertical-align: middle;\n",
+       "}\n",
+       "\n",
+       ".indent {\n",
+       "    margin-left: 12px;\n",
+       "}\n",
+       "\n",
+       ".tree_label {\n",
+       "    padding-left: 2px;\n",
+       "    font-size: 14px;\n",
+       "}\n",
+       "\n",
+       ".scroll_down {\n",
+       "    display: flex;\n",
+       "    flex-direction: column-reverse;\n",
+       "}\n",
+       "\n",
+       ".small_table {\n",
+       "    line-height: 14px;\n",
+       "}\n",
+       "\n",
+       ".monospace select {\n",
+       "    font-family: monospace;\n",
+       "}\n",
+       "\n",
+       "        .t-caret::before {\n",
+       "            content: u\"▶\";\n",
+       "            font-size: 12px;\n",
+       "            color: \"#080808\";\n",
+       "            display: inline-block;\n",
+       "            margin-right: 2px;\n",
+       "        }\n",
+       "\n",
+       "        .mac-scrollbar::-webkit-scrollbar-thumb {\n",
+       "            background-color: rgba(0, 0, 0, 0.2) !important;\n",
+       "            border-radius: 100px !important;\n",
+       "        }\n",
+       "\n",
+       "        .mac-scrollbar::-webkit-scrollbar-thumb:hover {\n",
+       "            background: rgba(0, 0, 0, 0.4) !important;\n",
+       "        }\n",
+       "\n",
+       "        .mac-scrollbar::-webkit-scrollbar-thumb:active {\n",
+       "            background: #181818 !important;\n",
+       "        }\n",
+       "\n",
+       "        .mac-scrollbar::-webkit-scrollbar-corner {\n",
+       "            background: white;\n",
+       "        }\n",
+       "\n",
+       "        .view_output {\n",
+       "            border: 1px solid var(--jp-border-color1);\n",
+       "            margin: 2px 2px 2px 2px !important;\n",
+       "            padding-right: 1px !important;\n",
+       "            background-color: white;\n",
+       "        }\n",
+       "    </style>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "606f3e2d9daf4c4f90990d5f2c0d8c5e",
+       "model_id": "4b06e51ca0b14bfea801fb1754024e4b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -33,46 +225,52 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<jupyter_cadquery.cad_display.CadqueryDisplay at 0x7f4abbb4d850>"
-      ]
-     },
-     "execution_count": 74,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "import cadquery as cq\n",
     "from jupyter_cadquery.cadquery import show\n",
+    "from cadquery import exporters\n",
     "\n",
     "thickness = 4.0\n",
-    "height = 40\n",
+    "\n",
     "total_length = 50\n",
     "total_width = 50\n",
     "fillet_radius = 3\n",
-    "mold_depth = 20\n",
+    "mold_depth = 50\n",
     "circle_dia = 15.9\n",
     "pin_length = 15\n",
+    "scale_factor_xy = 1\n",
+    "height = mold_depth + 5\n",
+    "top_hole_depth = 2\n",
+    "top_hole_dia = 30.2\n",
+    "scale_factor_xy = 1\n",
     "\n",
     "# Rotate CAD model \n",
     "# Axis of rotation \n",
     "rot_axis = (1,0,0)\n",
     "rot_angle = 90\n",
     "\n",
-    "obj = cq.importers.importStep('data/HYDAC-10000301803-SWB-000_01.STEP')\n",
+    "obj = cq.importers.importStep('data/obj2_simplified_04.stp')\n",
     "obj = obj.rotateAboutCenter(rot_axis, rot_angle)\n",
-    "obj_bbox = obj.val().BoundingBox()\n",
+    "show(obj)\n",
+    "t = cq.Matrix([\n",
+    "    [scale_factor_xy, 0, 0, 0],\n",
+    "    [0, scale_factor_xy , 0, 0],\n",
+    "    [0, 0, 1, 0],\n",
+    "    [0, 0, 0, 1]])\n",
+    "\n",
+    "obj = obj.val()\n",
+    "#obj = obj.transformGeometry(t)\n",
+    "\n",
+    "obj_bbox = obj.BoundingBox()\n",
     "\n",
     "x_trans = -(obj_bbox.xmin + obj_bbox.xmax)/2\n",
     "y_trans = -(obj_bbox.ymin + obj_bbox.ymax)/2\n",
     "z_trans = -(obj_bbox.zmin + obj_bbox.zmax)/2 + obj_bbox.zlen * 0.5 + height/2.0 - mold_depth\n",
     "\n",
     "obj = obj.translate((x_trans, y_trans, z_trans))\n",
-    "obj_bbox = obj.val().BoundingBox()\n",
+    "obj_bbox = obj.BoundingBox()\n",
     "\n",
     "\n",
     "# make the base\n",
@@ -80,11 +278,13 @@
     "s = s.edges(\">Z\").fillet(fillet_radius)\n",
     "s = s.cut(obj)\n",
     "\n",
+    "s = s.faces(\">Z\").workplane().hole(top_hole_dia, depth=top_hole_depth).edges(\">Z\").chamfer(top_hole_depth - 0.01)\n",
+    "\n",
     "s = s.faces(\"<Z\").workplane().circle(circle_dia/2.0).extrude(pin_length)\n",
     "\n",
-    "\n",
     "show(s)\n",
-    "show(obj)"
+    "\n",
+    "exporters.export(s, 'obj_2_fixture.stl')\n"
    ]
   },
   {
